--- a/flirting-guide.html
+++ b/flirting-guide.html
@@ -29,6 +29,8 @@
     .image {
       text-align: center;
       margin-bottom: 20px;
+      max-width: 800px;
+      width:100%;
     }
 
     .flirting-example {
