--- a/flirting-guide.html
+++ b/flirting-guide.html
@@ -29,8 +29,6 @@
     .image {
       text-align: center;
       margin-bottom: 20px;
-      max-width: 800px;
-      width:100%;
     }
 
     .flirting-example {
@@ -59,6 +57,10 @@
       color: #fff;
       text-decoration: none;
       border-radius: 5px;
+    }
+    img{
+      max-width: 800px;
+      width: 100%;
     }
   </style>
 </head>
