--- a/flirting-guide.html
+++ b/flirting-guide.html
@@ -70,7 +70,7 @@
     <h1>How To Flirt With Girls</h1>
 
     <div class="image">
-      <img src="https://source.unsplash.com/1600x900/?flirting" alt="Flirting">
+      <img src="https://source.unsplash.com/1600x900/?flirting" alt="Flirting" style="max-width:800px;width:100%">
     </div>
 
     <div class="flirting-example">
